# Arcadia

./: .gitignore  CMakeLists.txt
client/: client.hpp  client_handler.cpp  client_handler.hpp  client_includes.hpp  client_loader.cpp  client_loader.hpp  compatibility.hpp
client/menu/: menu_configuration.cpp  menu_configuration.hpp  menu_interface.cpp  menu_interface.hpp  menu_main.cpp  menu_main.hpp  menu_multi_player.cpp  menu_multi_player.hpp  menu_single_player.cpp  menu_single_player.hpp
cmake/: FindSDL2.cmake
common/: defines.hpp
common/unit/: bear.hpp  unit.cpp
src/: bear.cpp  bear.hpp  buff.cpp  buff.hpp  defines.h  stat.cpp  stat.hpp  team.cpp  team.hpp  unit.cpp  unit.hpp
test/: CMakeLists.txt
test/client/: CMakeLists.txt  menu.cpp  old_menu.cpp  opengl_version.cpp
test/server/: CMakeLists.txt  test0.cpp
tests/: CMakeLists.txt  test0.cpp
