cmake_minimum_required (VERSION 2.8.12 FATAL_ERROR)

project(arcadia_server_test)

#add_executable(test0 test0.cpp)
#target_include_directories(crypt_test PRIVATE ${CMAKE_SOURCE_DIR})
#target_link_libraries(crypt_test crypt)
#target_compile_options(crypt_test PRIVATE -std=c++11 -Wall -static-libgcc -static-libstdc++)

#Call tests with make test

#set(TESING_REGEX "doesn't work properly: ")
#add_test( caesar crypt_test caesar.xml)
#set_tests_properties( caesar PROPERTIES FAIL_REGULAR_EXPRESSION ${TESING_REGEX})